<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ptandon.wonderlist.AddItemActivity">

    <TextView
        android:id="@+id/addnewtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_new_task"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:layout_alignBottom="@+id/addnewtask"
        android:layout_toRightOf="@+id/addnewtask"
        android:layout_toEndOf="@+id/addnewtask"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="7dp" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/addnewtask"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/task_name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/taskName"
        android:id="@+id/view" />

    <EditText
        android:id="@+id/addItemInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/addTaskHint"
        android:textColorHint="@android:color/darker_gray"
        android:layout_alignTop="@+id/taskName"
        android:layout_alignBottom="@+id/view"
        android:layout_toRightOf="@+id/taskNote"
        android:layout_toEndOf="@+id/taskNote" />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/taskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/taskName"
        android:layout_below="@+id/taskName"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:text="@string/due_date"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/due_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/priority"
        android:layout_alignEnd="@+id/addItemInput"
        android:layout_alignLeft="@+id/priority_spinner"
        android:layout_alignRight="@+id/addItemInput"
        android:layout_alignStart="@+id/priority_spinner"
        android:layout_alignTop="@+id/due_date"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/addDateHint"
        android:onClick="showDatePickerDialog"
        android:textColorHint="@android:color/darker_gray" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/due_date_text"
        android:id="@+id/view5" />
    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/due_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/due_date"
        android:layout_below="@+id/due_date"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:text="@string/priority"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/priority"
        android:id="@+id/view4" />
    <Spinner android:id="@+id/priority_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/priority"
        android:layout_alignRight="@+id/addItemInput"
        android:layout_alignEnd="@+id/addItemInput"
        android:layout_above="@+id/view4"
        android:layout_alignLeft="@+id/taskNoteInput"
        android:layout_alignStart="@+id/taskNoteInput" />
    <Button
        android:id="@+id/editButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:onClick="onCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/addnewtask"
        android:layout_alignStart="@+id/addnewtask" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/priority"/>
    <TextView
        android:id="@+id/taskNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/taskNote"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/view4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />
    <EditText
        android:id="@+id/taskNoteInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Please enter the task notes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/taskNote"
        android:layout_alignTop="@+id/taskNote"
        android:textColorHint="@android:color/darker_gray"
        android:layout_toRightOf="@+id/taskNote"
        android:layout_toEndOf="@+id/taskNote" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/taskNote"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:onClick="showDatePickerDialog"
        app:srcCompat="@mipmap/calendar2"
        android:layout_marginTop="8dp"
        android:layout_alignTop="@+id/due_date_text"
        android:layout_alignRight="@+id/due_date_text"
        android:layout_alignEnd="@+id/due_date_text" />

</RelativeLayout>
